syntax = "proto3";

package message.user_action;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.user_action";

import "google/protobuf/timestamp.proto";

enum ActionTypeProto {
 VIEW = 0;
 REGISTER = 1;
 LIKE = 2;
}

message UserActionProto {
 int64 user_id = 1;
 int64 event_id = 2;
 ActionTypeProto type = 3;
 google.protobuf.Timestamp timestamp = 4;
}
