syntax = "proto3";

package stats.service.collector;

import "messages/user_action.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.collector";

service UserActionController {
rpc CollectUserAction (message.user_action.UserActionProto)
    returns (google.protobuf.Empty);
 }